--- a/estilos/style.css
+++ b/estilos/style.css
@@ -15,3 +15,27 @@ main{
     padding: 10px;
     box-shadow: 3px 3px 5px black;
 }
+
+h1{
+    font-size: 1.5em;
+    color: blueviolet
+}
+
+h2{
+    font-size: 1.5em;
+    color: blueviolet
+}
+
+img.Lado {
+    float: right;
+}
+a {
+    text-decoration: none;
+    font-weight: bold;
+    color: blueviolet;
+}
+
+a:hover{
+    text-decoration: underline;
+    color: blue;
+}
